--- a/index2.html
+++ b/index2.html
@@ -45,6 +45,7 @@
   #resizable h3 { text-align: center; margin: 0; }
   </style>
 <body><div id="accordion">
+  <h3>ABOBA</h3>
   <h3>Section 1</h3>
   <div>
     <p>
