--- a/index2.html
+++ b/index2.html
@@ -44,8 +44,9 @@
   #resizable { width: 150px; height: 150px; padding: 0.5em; }
   #resizable h3 { text-align: center; margin: 0; }
   </style>
-<body><div id="accordion">
-  <h3>ABOBA</h3>
+<body>
+  <h3>ABOBA</h3><div id="accordion">
+  
   <h3>Section 1</h3>
   <div>
     <p>
